# fpl2026-wasi-fpga-artifact

./: .gitignore  ARTIFACT_MANIFEST.md  CITATION.cff  CoDesign_Report_Complete.md  LICENSE  README.md  README_AE.md  install_xrt.md  troubleshooting_zocl_no_devices.md  wasm_workload_test.md
artifacts/: README.md
checksums/: README.md
wasi-fpga/: .gitignore  BENCHMARKING_GUIDE.md  Cargo.toml  wrapper.h
wasi-fpga/docker-build_v4_final/: conectar_wifi.sh
wasi-fpga/docker-build_v4_final/docker-build_v2/: Dockerfile  README_deploy.md  debug-pod.yaml  fpga-config.yaml  fpga-flexible-poc.yaml  fpga-poc.yaml  fpga-video-poc.yaml  generated_pod.yaml  k3s-bcpnn-job.yaml  run_fpga_poc.sh  setup_zcu104_v2.sh
wasi-fpga/src/: buffer_manager.rs  error.rs  fpga_state.rs  lib.rs  opencl.rs  xrt.rs
wasi-fpga/wasm/: bench_bcpnn_infer.rs  test_bcpnn_infer.rs  test_bcpnn_infer_video.rs  test_bcpnn_inference.rs  test_const_write.rs  test_opencl_vadd.rs  test_register_return.rs  test_v1.rs
workloads/wasm/poc-test/: Cargo.toml  README.md  build.sh
workloads/wasm/poc-test/src/: main.rs
