[package]
name = "wasi-fpga"
version = "0.1.0"
edition = "2021"
authors = ["Anonymous artifact authors"]
description = "WASI FPGA extensions for WasmEdge via XRT"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Usar solo wasmedge-sdk - las dependencias transitivas (sys, types) vienen incluidas
wasmedge-sdk = { version = "0.14.0", features = ["standalone"] }
wasmedge-sys = { version = "0.19.0", features = ["ffi"] }
libc = "0.2"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.4"

[build-dependencies]
# bindgen ya no es necesario (backend OpenCL usa bindings manuales)

[dev-dependencies]
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1